--- a/Main.ipynb
+++ b/Main.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c2a85a8a",
+   "id": "a7bb38eb",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d2713647",
+   "id": "7b7a0692",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "69b24281",
+   "id": "8933367f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c67d03f4",
+   "id": "8ec15da2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "59e6702e",
+   "id": "a9241d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7109f99b",
+   "id": "44aaf3f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c26b3c4c",
+   "id": "246ceae1",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dd276933",
+   "id": "dd67ed89",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d837bf3b",
+   "id": "423d5f16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8d83f6c4",
+   "id": "b012bde0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6b90d5a5",
+   "id": "342c068f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a9d06972",
+   "id": "7003b6d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cf1d8401",
+   "id": "6f8f671b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0069988e",
+   "id": "a4c6e0b0",
    "metadata": {
     "scrolled": true
    },
@@ -1349,7 +1349,24 @@
       "[I 2024-11-15 09:19:55,450] Trial 49 finished with value: -1155.8305915504538 and parameters: {'n_estimators': 574, 'max_depth': 9, 'learning_rate': 0.059532033213018684, 'subsample': 0.7830431818395042, 'colsample_bytree': 0.7342319365435407, 'min_child_weight': 7, 'gamma': 2.267325648659781e-05, 'reg_alpha': 2.4776316713758106e-07, 'reg_lambda': 0.0029180189572915855}. Best is trial 29 with value: -806.1518070011771.\n",
       "[I 2024-11-15 09:20:04,282] Trial 50 finished with value: -946.8161417301466 and parameters: {'n_estimators': 763, 'max_depth': 10, 'learning_rate': 0.09645357413324582, 'subsample': 0.7338916780818813, 'colsample_bytree': 0.7150342066864249, 'min_child_weight': 6, 'gamma': 0.00016083176133326713, 'reg_alpha': 6.566607930701982e-07, 'reg_lambda': 0.2085237214216513}. Best is trial 29 with value: -806.1518070011771.\n",
       "[I 2024-11-15 09:20:13,516] Trial 51 finished with value: -824.8612800301456 and parameters: {'n_estimators': 823, 'max_depth': 9, 'learning_rate': 0.047131602894508885, 'subsample': 0.8141986391191282, 'colsample_bytree': 0.65437407094262, 'min_child_weight': 6, 'gamma': 1.0658720782618536e-06, 'reg_alpha': 3.3259374272892184e-07, 'reg_lambda': 3.980884842056306e-05}. Best is trial 29 with value: -806.1518070011771.\n",
-      "[I 2024-11-15 09:20:22,183] Trial 52 finished with value: -938.1516805651266 and parameters: {'n_estimators': 826, 'max_depth': 9, 'learning_rate': 0.07699075610938148, 'subsample': 0.817030153327755, 'colsample_bytree': 0.692279772423792, 'min_child_weight': 7, 'gamma': 9.509663296532734e-08, 'reg_alpha': 2.1303775925335642e-08, 'reg_lambda': 3.0704394404810436e-05}. Best is trial 29 with value: -806.1518070011771.\n"
+      "[I 2024-11-15 09:20:22,183] Trial 52 finished with value: -938.1516805651266 and parameters: {'n_estimators': 826, 'max_depth': 9, 'learning_rate': 0.07699075610938148, 'subsample': 0.817030153327755, 'colsample_bytree': 0.692279772423792, 'min_child_weight': 7, 'gamma': 9.509663296532734e-08, 'reg_alpha': 2.1303775925335642e-08, 'reg_lambda': 3.0704394404810436e-05}. Best is trial 29 with value: -806.1518070011771.\n",
+      "[I 2024-11-15 09:28:59,443] Trial 53 finished with value: -856.7916890401245 and parameters: {'n_estimators': 687, 'max_depth': 8, 'learning_rate': 0.056138338821423744, 'subsample': 0.8686625468229265, 'colsample_bytree': 0.665915060688667, 'min_child_weight': 6, 'gamma': 5.385999364121901e-07, 'reg_alpha': 1.237509928263206e-07, 'reg_lambda': 7.405981009664599e-05}. Best is trial 29 with value: -806.1518070011771.\n",
+      "[I 2024-11-15 09:29:10,295] Trial 54 finished with value: -1308.099405050791 and parameters: {'n_estimators': 887, 'max_depth': 8, 'learning_rate': 0.002330534315674936, 'subsample': 0.8678685249659939, 'colsample_bytree': 0.6580237004013981, 'min_child_weight': 5, 'gamma': 2.394528730988478e-07, 'reg_alpha': 1.6040389075794127e-06, 'reg_lambda': 0.00024220980717080324}. Best is trial 29 with value: -806.1518070011771.\n",
+      "[I 2024-11-15 09:29:17,674] Trial 55 finished with value: -1008.7170372148934 and parameters: {'n_estimators': 923, 'max_depth': 7, 'learning_rate': 0.009855207226340828, 'subsample': 0.90345138970577, 'colsample_bytree': 0.6227313055999333, 'min_child_weight': 6, 'gamma': 5.919455849481842e-07, 'reg_alpha': 1.2506502248201817e-07, 'reg_lambda': 1.2242184982716169e-05}. Best is trial 29 with value: -806.1518070011771.\n",
+      "[I 2024-11-15 09:29:24,808] Trial 56 finished with value: -970.7299445653895 and parameters: {'n_estimators': 840, 'max_depth': 8, 'learning_rate': 0.04307310775740619, 'subsample': 0.7991071831948908, 'colsample_bytree': 0.68546653949476, 'min_child_weight': 5, 'gamma': 3.2296849204829385e-06, 'reg_alpha': 7.009412354897766e-06, 'reg_lambda': 8.520790262043551e-07}. Best is trial 29 with value: -806.1518070011771.\n",
+      "[I 2024-11-15 09:29:26,497] Trial 57 finished with value: -1494.015963052336 and parameters: {'n_estimators': 129, 'max_depth': 8, 'learning_rate': 0.012375515065275355, 'subsample': 0.8785502863139931, 'colsample_bytree': 0.66822358308146, 'min_child_weight': 6, 'gamma': 1.580619225608337e-07, 'reg_alpha': 4.2067145353256794e-07, 'reg_lambda': 0.0004269750824212391}. Best is trial 29 with value: -806.1518070011771.\n",
+      "[I 2024-11-15 09:29:39,622] Trial 58 finished with value: -1081.7243105749124 and parameters: {'n_estimators': 761, 'max_depth': 10, 'learning_rate': 0.02712066194078835, 'subsample': 0.7759959524923588, 'colsample_bytree': 0.6393119155154905, 'min_child_weight': 6, 'gamma': 3.5726483522618233e-08, 'reg_alpha': 1.7538437662344724e-07, 'reg_lambda': 1.0795242721752426e-08}. Best is trial 29 with value: -806.1518070011771.\n",
+      "[I 2024-11-15 09:29:49,174] Trial 59 finished with value: -1022.4078399715484 and parameters: {'n_estimators': 962, 'max_depth': 11, 'learning_rate': 0.036759739828330425, 'subsample': 0.8362201567813463, 'colsample_bytree': 0.611841127904074, 'min_child_weight': 6, 'gamma': 5.688731817527292e-07, 'reg_alpha': 1.1275991767436244e-06, 'reg_lambda': 7.491257337445553e-06}. Best is trial 29 with value: -806.1518070011771.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2024-11-15 09:29:53,497] Trial 60 finished with value: -931.592885996777 and parameters: {'n_estimators': 779, 'max_depth': 5, 'learning_rate': 0.052112721374408685, 'subsample': 0.8524551695327803, 'colsample_bytree': 0.6503667045238201, 'min_child_weight': 6, 'gamma': 1.6018384014308314e-06, 'reg_alpha': 0.00029512858859267305, 'reg_lambda': 2.278934350350005e-06}. Best is trial 29 with value: -806.1518070011771.\n",
+      "[I 2024-11-15 09:30:01,312] Trial 61 finished with value: -895.6637631107961 and parameters: {'n_estimators': 690, 'max_depth': 9, 'learning_rate': 0.06333949608005246, 'subsample': 0.829033677371626, 'colsample_bytree': 0.8245361236679546, 'min_child_weight': 7, 'gamma': 7.130082266377403e-05, 'reg_alpha': 4.628158272848866e-08, 'reg_lambda': 7.913531399162988e-05}. Best is trial 29 with value: -806.1518070011771.\n",
+      "[I 2024-11-15 09:30:11,189] Trial 62 finished with value: -901.6005626342212 and parameters: {'n_estimators': 704, 'max_depth': 9, 'learning_rate': 0.06652346052018136, 'subsample': 0.8286064806003652, 'colsample_bytree': 0.8657168082185303, 'min_child_weight': 7, 'gamma': 5.1163582203868616e-05, 'reg_alpha': 3.6288498756187413e-08, 'reg_lambda': 0.00013120918521038088}. Best is trial 29 with value: -806.1518070011771.\n",
+      "[I 2024-11-15 09:30:20,303] Trial 63 finished with value: -906.0956171220183 and parameters: {'n_estimators': 609, 'max_depth': 10, 'learning_rate': 0.0588712555757127, 'subsample': 0.806753582137824, 'colsample_bytree': 0.8311005574720141, 'min_child_weight': 7, 'gamma': 0.0001234893197529841, 'reg_alpha': 1.7547330288725475e-08, 'reg_lambda': 2.008681586063954e-05}. Best is trial 29 with value: -806.1518070011771.\n"
      ]
     }
    ],
@@ -1400,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb1fbc8d",
+   "id": "b7415231",
    "metadata": {},
    "outputs": [],
    "source": []
